Corrected brand alignment for DELL machine

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -40,6 +40,6 @@ ul {
 
 .brand {
   color: #ddd;
-  font-size: 48px;
-  margin-top: 1%;
+  font-size: 1.5em;
+  margin-top: 2%;
 }
